# miniHelp

./: .gitignore  CMakeLists.txt  Makefile  build.sh  main.cpp
.github/workflows/: main.yml
LibLog/: CMakeLists.txt  log.c  log.h
LibLog/example/: CMakeLists.txt  main.c
LibLog/tests/: CMakeLists.txt  tst_LibLog.h
cmake_version/: generate_version.cmake  version.h.in
